fixed wires despawning when walking far away; updated Wire Connector item